tests/ui/cached_store_types_exclusive.stderr
error: cache types (`max_size` and/or `ttl`, or `ty` and `create`) are mutually exclusive
 --> tests/ui/cached_store_types_exclusive.rs:6:4
  |
6 | fn my_fn(k: i32) -> i32 {
  |    ^^^^^
